# webCam2RTSP

./: CMakeLists.txt  LICENSE  README.md  main.cpp  webCam2RTSP.pro
